--- a/chatbot/parent/templates/activities_list.html
+++ b/chatbot/parent/templates/activities_list.html
@@ -148,7 +148,12 @@
                                 <div class="month" style="font-weight: normal; color: black; font-size:medium;"> {{activity.activity_type}}</div>
                             </div>
                             <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
-                              
+                                <div class=" mt-2 text-center">
+                                    <!-- Details Button -->
+                                    <button data-href=""
+                                        class="btn btn-outline-success btn-xs mb-2" role="button" data-toggle="modal"
+                                        data-target="#activityModal" onclick="goActivity('{% url 'activity-students-list-parent' activity.id %}')">Details</button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -162,28 +167,7 @@
 
 
             <!-- Modal -->
-            <div class="modal fade" id="activityModal" tabindex="-1" role="dialog"
-                aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="activityModal">Activity Details</h5>
-                                <button type="button" class="custom-close-button" data-dismiss="modal"
-                                    aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <!-- Activity details will be loaded here -->
-                            </div>
-                            <!-- <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        </div> -->
-                        </div>
-                    </div>
-                </div>
-            </div>
+           
 
             <!-- <button class="floating-button">+</button> -->
  
@@ -225,6 +209,10 @@
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
     });
+
+    function goActivity (url) {
+        window.open(url,'_blank');
+    }
 
 </script>
 
