--- a/chatbot/teacher/templates/activity_list_teacher.html
+++ b/chatbot/teacher/templates/activity_list_teacher.html
@@ -12,6 +12,8 @@
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 <style>
+
+
     .emoji-text {
         display: inline-block;
         margin-right: 5px;
@@ -122,7 +124,7 @@
 
             {% for activity in activities %}
             <div class="row mb-3 justify-content-center align-items-center slide-in-left">
-                <div class="card mb-3" style="width: 90%; height: 90%; padding: 0; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4); border-radius: 10px;">
+                <div class="card mb-3" style="width: 90%;height: 90%; padding: 0; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4); border-radius: 10px;" >
                     <div class="row g-0">
                         <div class="col-md-2 d-flex flex-column justify-content-center align-items-center" style="border-right: 1px solid black;">
                             <div class="month" style="color: black;">{{ activity.activity_date|date:"F" }}</div>
@@ -145,35 +147,21 @@
                             <div class="month" style="font-weight: normal; color: black; font-size:medium;">{{ activity.activity_type }}</div>
                         </div>
                         <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
-                            
+                            <div class=" mt-2 text-center">
+                                <!-- Details Button -->
+                                <button data-href=""
+                                    class="btn btn-outline-success btn-xs mb-2" role="button" data-toggle="modal"
+                                    data-target="#activityModal" onclick="goActivity('{% url 'activity-students-list-teacher' activity.id %}')">Details</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             {% endfor %}
 
-            <!-- Modal -->
-            <div class="modal fade" id="activityModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="activityModal">Activity Details</h5>
-                                <button type="button" class="custom-close-button" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <!-- Activity details will be loaded here -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
 
-        </div>
-    </div>
-</div>
+
 
 <!-- jQuery, Popper.js, and Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -201,6 +189,10 @@
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
     });
+
+    function goActivity (url) {
+        window.open(url,'_blank');
+    }
 </script>
 
 {% endblock %}
