--- a/chatbot/parent/templates/master_parent.html
+++ b/chatbot/parent/templates/master_parent.html
@@ -107,7 +107,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="{% url 'checkout_view' %}">
+                    <a href="{% url 'student-billing' %}">
                         <span class="fa fa-money mr-3"></span><span class="text"> Billing</span>
                     </a>
                 </li>
