--- a/chatbot/administrator/templates/billing.html
+++ b/chatbot/administrator/templates/billing.html
@@ -139,10 +139,10 @@
 <div class="header-container">
     <h1 style="font-size: 20px;" class="slide-in-left">Create Payment</h1>
 
-    <!-- <div id="navbar">
-        <a href="{% url 'activity' %}" class="navbar-link">Activity List</a>
-        <a href="{% url 'register-activity' %}" class="navbar-link">Register Activity</a>
-    </div> -->
+    <div id="navbar">
+        <a href="{% url 'payment-list' %}" class="navbar-link">Payment List</a>
+        <a href="{% url 'billing' %}" class="navbar-link">Create Payment</a>
+    </div>
 </div>
 
 
