--- a/chatbot/administrator/templates/media.html
+++ b/chatbot/administrator/templates/media.html
@@ -122,7 +122,7 @@
 </div>
 
 <button class="floating-button2" id="scrollToTopBtn" onclick="scrollToTop()">↑</button>
-<button class="floating-button">+</button>
+<!-- <button class="floating-button">+</button> -->
 
 <script>
     function scrollToTop() {
